<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Health Monitoring System</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="doctor_patient">Doctor/Patient</string>
    <string name="sign_in">Sign In</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="blood_presser">Blood Presser</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="input">Input</string>
    <string name="submit">Submit</string>
    <string name="doctor_list">Doctor List</string>
    <string name="nameofdoctor">Name of Doctor</string>
    <string name="phonenumber">Phone Number</string>
    <string name="deparment">Department</string>
    <string name="doctordegree">Degree</string>
    <string name="drsheikhnesaruddin">Dr.Nesaruddin</string>
    <string name="mbbsfcpsfrcp">MBBS,FCPS,FRCP</string>
    <string name="medicinedepartment1">Medicine Department</string>
    <string name="Num880171515393">+880 171515393</string>
    <string name="professordrfazlulhoque">Dr. Fazlul Hoque</string>
    <string name="medicinedepartment2">Medicine Department</string>
    <string name="mbbsmd">MBBS,MD</string>
    <string name="name_of_doctor">Name of Doctor</string>
    <string name="phone_number">Phone Number</string>
    <string name="dr_esaruddin_ahmed">Dr.Nesaruddin Ahmed</string>
    <string name="mbbs_fcps">MBBS,FRCP ,FCPS</string>
    <string name="department">Department</string>
    <string name="degree">Degree</string>
    <string name="logo">logo</string>
    <string name="age">Age</string>


    <array name="LoginModeList">
        <item>Login Mode</item>
        <item>Doctor</item>
        <item>Patient</item>
    </array>
    <string name="title_activity_doctor_layout">doctorLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_layout">patientLayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_appoint_ractivity">appointRactivity</string>
    <string name="title_activity_check">checkActivity</string>


</resources>