<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bd"

    tools:context=".Home">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/new_bg">

        <TextView
            android:id="@+id/bpId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:drawableStart="@drawable/bp"
            android:gravity="left"
            android:text="@string/blood_presser"
            android:textAlignment="center"
            android:textColor="@color/colorblack"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/inputId"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="142dp"
        android:gravity="center_horizontal"
        android:text="Input"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="169dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="336dp"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/new_bg">

        <TextView
            android:id="@+id/bsId"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:drawableStart="@drawable/bs"
            android:text="@string/blood_sugar"
            android:textAlignment="center"
            android:textColor="@color/colorblack"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/input1Id"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="337dp"
        android:gravity="center_horizontal"
        android:text="@string/input"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="152dp"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <Button
        android:id="@+id/submitId"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="47dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/studentNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:menu="@menu/patient_profile_menu"/>




</android.support.v4.widget.DrawerLayout>