<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".DoctorList">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        tools:targetApi="o">

        <TableRow>

            <TextView
                android:id="@+id/nameofdoctorId"
                android:layout_width="100dp"
                android:layout_height="93dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name_of_doctor"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/department"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/degree"
                android:textColor="@color/colorblack"
                android:textSize="25sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="229dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="Dr.Fazlul Hoque"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="0171515393"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="Medicine Department"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="MBBS,FCPS"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="229dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="Dr.Nesaruddin"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="+88028610793"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="Neurologist"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="219dp"
                android:layout_height="125dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginVertical="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="MBBS,FCPS,MD"
                android:textColor="@color/colorblack"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/appoinmentId"
        android:layout_width="180dp"
        android:layout_height="66dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="Appointment"
        android:textColor="@color/colorblack"
        android:textSize="20sp"
        android:textStyle="bold" />




</LinearLayout>